Testing the width overflowing issue fix

--- a/static/style.css
+++ b/static/style.css
@@ -28,7 +28,6 @@
 } */
 
 #container{
-  max-width:720px;
   margin:0px auto;
 }
 
